--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "buffer": "^6.0.3",
     "cohere-ai": "^5.0.2",
     "react-hook-speech-to-text": "^0.8.0",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0"
   },
   "devDependencies": {
     "webpack": "^4.46.0"
